상세정보 다시
상세정보 수정

--- a/KMJ/20210201_minjun/정보/info_css.css
+++ b/KMJ/20210201_minjun/정보/info_css.css
@@ -64,11 +64,18 @@
  }
 
  .tg  {border-collapse:collapse;border-spacing:0;}
+
+ .tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+   overflow:hidden;padding:10px 5px;word-break:normal;}
+
+ .tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+   font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+
+ .tg .tg-5e02{background-color:#f7dbd9;text-align:center;vertical-align:top}
  
-.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  overflow:hidden;padding:10px 5px;word-break:normal;}
+ .tg .tg-visl{background-color:#ffccc9;font-family:Impact, Charcoal, sans-serif !important;;font-size:20px;font-weight:bold;
+   text-align:center;vertical-align:top}
 
-.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
-  font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+ .tg .tg-4klx{background-color:#f7dbd9;font-size:22px;text-align:center;vertical-align:top}
 
-.tg .tg-0lax{text-align:left;vertical-align:top}
+ .tg .tg-ybzk{background-color:#f7dbd9;font-size:23px;text-align:center;vertical-align:top}
