--- a/KYJ/0201/root_ver/css/main_post.css
+++ b/KYJ/0201/root_ver/css/main_post.css
@@ -10,6 +10,7 @@ li{
 .wrap_posts{
     display: block;
     padding: 200px 3vw 3vw 3vw;
+    /* margin: 200px 50px; */
     text-align: center;
 }
 .main_title{
