로그인 연동, 게시판 마우스 호버
게시판 게시글에 마우스 호버 시 제목 나타남(+이미지 확대, 어두워짐)
로그인해야 글쓰기 가능
로그인 -> 글 작성한 topic.author_id == member.id여야 수정, 삭제 가능

--- a/KYJ/0205/css/main_post.css
+++ b/KYJ/0205/css/main_post.css
@@ -51,13 +51,35 @@ li{
 }
 .postImg_wrapper{
     display: inline-block;
+    position: relative;
     width: 120px;
     height: 120px;
     margin: 0 5px 10px 5px;
     overflow: hidden;
     vertical-align: middle;
 }
-
+.postImg_wrapper:hover{
+    transform: scale(1.05);
+}
+.darkness{
+    position: absolute;
+    background:#000;
+    top: 0;
+    left: 0;
+    width: 120px;
+    height: 120px;
+    opacity: 0;
+    transition: all .4s ease-in;
+    text-align:center;
+    line-height: 120px;
+}
+.postImg_wrapper:hover .darkness{
+    opacity: 0.4;
+}
+.postImg_wrapper:hover .darkness p{
+    color: white;
+    opacity: 1;
+}
 /* 글 박스 */
 .show_box{
     display: block;
@@ -119,7 +141,6 @@ li{
     /* display: block; */
     width: 520px;
     margin: 0 auto;
-    /* text-indent: 10px; */
     padding: 50px 10px 50px;
     border: 1px solid black;
 }
