--- a/KMJ/20210201_minjun/작업/map_css.css
+++ b/KMJ/20210201_minjun/작업/map_css.css
@@ -25,8 +25,8 @@
 
 .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
 .map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
-.map_wrap {position: absolute; ;width:100%;height:500px; left: 600; top: 200; }
-#menu_wrap {position:absolute;  height: 740px; top:30; bottom:0;width:300px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
+.map_wrap {position: absolute; ;width:100%;height:500px; left: 600; top: 300; }
+#menu_wrap {position:absolute;  height: 740px; top:30; left:1300;bottom:0;width:300px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
 .bg_white {background:#fff;}
 #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0; background-color: wheat}
 #menu_wrap .option{text-align: center;}
@@ -64,4 +64,58 @@
   width: 40px;
   margin: 0 auto;
   float: none;
+}
+
+@import url(https://fonts.googleapis.com/css?family=Muli);
+.nevigation {
+  font-family: 'Muli', Arial, sans-serif;
+  font-size: 30px;
+  letter-spacing: 1.5px;
+  line-height: 1em;
+  margin: 15px 40px;
+  text-transform: uppercase;
+}
+.nevigation li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 0.5em 0.6em;
+  padding: 12px 15px;
+  position: relative;
+}
+.nevigation li a {
+  color: black;
+  text-decoration: none;
+}
+.nevigation li:before,
+.nevigation li:after {
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  height: 2px;
+  width: 35%;
+  background-color:coral;
+  position: absolute;
+  content: '';
+  opacity: 0;
+}
+.nevigation li:before {
+  top: 0;
+  left: 0;
+}
+.nevigation li:after {
+  bottom: 0;
+  right: 0;
+}
+.nevigation li:hover:before,
+.nevigation li.hover:before,
+.nevigation li:hover:after,
+.nevigation li.hover:after {
+  opacity: 1;
+}
+.nevigation li:hover:before,
+.nevigation li.hover:before {
+  left: 65%;
+}
+.nevigation li:hover:after,
+.nevigation li.hover:after {
+  right: 65%;
 }
