--- a/KMJ/20210201_minjun/정보/css/info_css.css
+++ b/KMJ/20210201_minjun/정보/css/info_css.css
@@ -1,14 +1,11 @@
-
-
-
-
 .ch-item {
-	width: 80%;
-	height: 80%;
+	width: 100%;
+	height: 100%;
 	border-radius: 50%;
 	position: relative;
 	cursor: default;
 	box-shadow: 
+		inset 0 0 0 0 rgba(200,95,66, 0.4),
 		inset 0 0 0 16px rgba(255,255,255,0.6),
 		0 1px 2px rgba(0,0,0,0.1);
 		
@@ -20,35 +17,29 @@
 }
 
 .ch-img-1 { 
-	top: 300px;
 	background-image: url(/KMJ/20210201_minjun/images/강아지.jpg);
-	width: 200px;
-	height: 200px;
-	
+	margin-top: 400;
+	margin-left: -200;
 }
 
 .ch-img-2 { 
-	top: 300px;
 	background-image: url(/KMJ/20210201_minjun/images/고양이.jpg);
-	width: 200px;
-	height: 200px;
-
-}
-.ch-img-3 { 
-	top: 300px;
-	background-image: url(/KMJ/20210201_minjun/images/햄스터.jpg);
-	width: 200px;
-	height: 200px;
+	margin-top: 400;
 	
+}
+
+.ch-img-3 { 
+	background-image: url(/KMJ/20210201_minjun/images/햄스터.jpg);
+	margin-top: 400;
+	margin-left: 200;
 }
 
 .ch-info {
 	position: absolute;
-	background:  #f36506;
-	width: inherit;
-	height: inherit;
+	width: 100%;
+	height: 100%;
 	border-radius: 50%;
-	opacity: 0.5;
+	opacity: 0;
 	
 	-webkit-transition: all 0.4s ease-in-out;
 	-moz-transition: all 0.4s ease-in-out;
@@ -62,18 +53,19 @@
 	-ms-transform: scale(0);
 	transform: scale(0);
 	
-	-webkit-backface-visibility: hidden;
+	-webkit-backface-visibility: hidden; /*for a smooth font */
 
 }
 
 .ch-info h3 {
 	color: #fff;
 	text-transform: uppercase;
+	position: relative;
 	letter-spacing: 2px;
 	font-size: 22px;
 	margin: 0 30px;
-	padding: 45px 0 0 0;
-	height: 140px;
+	padding: 65px 0 0 0;
+	height: 110px;
 	font-family: 'Open Sans', Arial, sans-serif;
 	text-shadow: 
 		0 0 1px #fff, 
@@ -87,12 +79,6 @@
 	margin: 0 30px;
 	font-size: 12px;
 	border-top: 1px solid rgba(255,255,255,0.5);
-	opacity: 0;
-	-webkit-transition: all 1s ease-in-out 0.4s;
-	-moz-transition: all 1s ease-in-out 0.4s;
-	-o-transition: all 1s ease-in-out 0.4s;
-	-ms-transition: all 1s ease-in-out 0.4s;
-	transition: all 1s ease-in-out 0.4s;
 }
 
 .ch-info p a {
@@ -115,26 +101,338 @@
 
 .ch-item:hover {
 	box-shadow: 
-		inset 0 0 0 1px rgba(255,255,255,0.1),
+		inset 0 0 0 110px rgba(200,95,66, 0.4),
+		inset 0 0 0 16px rgba(255,255,255,0.8),
 		0 1px 2px rgba(0,0,0,0.1);
 }
+
 .ch-item:hover .ch-info {
+	opacity: 1;
+	
 	-webkit-transform: scale(1);
 	-moz-transform: scale(1);
 	-o-transform: scale(1);
 	-ms-transform: scale(1);
-	transform: scale(1);
-	opacity: 1;
+	transform: scale(1);	
 }
 
-.ch-item:hover .ch-info p {
-	opacity: 1;
+.f_c{
+	width: 40px;
+	margin: 0 auto;
+	float: none;
+  }
+
+
+  .service_header {
+    width: 100%;
+    height: 80px;
+    position: static;
+    float: left;
+    z-index: 10000;
+    transition: background 0.3s ease-in 0s;
+    top: 0;
+}
+.service_header .beyond_content{
+    height: 60px;
+    position: fixed;
+    background: rgba(255, 255, 255, 0.9);
+    box-sizing: border-box;
+}
+
+.service_header .wrap_inner {
+    margin: 20px 50px 0;
+    text-align: center;
+}
+.service_header .img_ico {
+    background: url(/designSource/ico/Menu_icon_icon-icons.com_71858.svg) no-repeat;
+    height: 45px;
+    width: 45px;
+}
+.service_header.article .btn_menu, .service_header.cbt .btn_menu, .service_header.top .btn_menu {
+    background-position: 0 0;
+    border-radius: 0;
+}
+.service_header .btn_request, .service_header .btn_write {
+    width: 64px;
+    height: 28px;
+    color: rgb(255, 255, 255);
+    border: 1px solid #fcfcfc;
+    background-color: coral;
+    border-radius: 16px;
+    line-height: 28px;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: 'Noto Sans Light',sans-serif;
+    text-align: center;
+    text-decoration: none;
+}
+.f_l{
+    margin-top: 2px;
+}
+.f_c{
+    width: 40px;
+    margin: 0 auto;
+    float: none;
+}
+.f_r{
+    margin-top: -20px;
+    margin-right: 80px;
+    float: right;
 }
 
 
+@import url(https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css);
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,800);
+figure.snip1114 {
+  font-family: 'Raleway', Arial, sans-serif;
+  position: relative;
+  overflow:hidden;
+  top: 500;
+  left: 400;
+  min-width: 250px;
+  max-width: 350px;
+  max-height: 350px;
+  width: 100%;
+  background: #000000;
+  color: #ffffff;
+  text-align: center;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+  float: center;
+}
+
+figure.snip1114 * {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+}
+
+#img_a{
+  top: 650;
+}
+
+#img_b{
+  left: 1070;
+  top: 100;
+}
+
+#img_c{
+  left: 1800;
+  top: 30;
+}
+figure.snip1114 img {
+  max-width: 100%;
+  position: relative;
+  opacity: 0.8;
+}
+
+figure.snip1114 .circle {
+  display: inline-block;
+  position: relative;
+  height: 65px;
+  width: 65px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+figure.snip1114 .circle:before,
+figure.snip1114 .circle:after {
+  border: 2px solid white;
+  border-right-color: transparent;
+  border-left-color: transparent;
+  position: absolute;
+  content: '';
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-transition: all 0.35s ease-in-out;
+  transition: all 0.35s ease-in-out;
+  -webkit-transition-delay: 0.15s;
+  transition-delay: 0.15s;
+}
+
+figure.snip1114 .circle:before {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+figure.snip1114 .circle:after {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+figure.snip1114 figcaption {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  display: block;
+}
+
+figure.snip1114 h2 {
+  position: absolute;
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: -1px;
+  top: 50%;
+  left: -50%;
+  width: 200%;
+  padding: 0 20px;
+  opacity: 0;
+  -webkit-transform: translateY(-50%) scale(0.9);
+  transform: translateY(-50%) scale(0.9);
+}
+
+figure.snip1114 h2 span {
+  font-weight: 800;
+}
+
+figure.snip1114 .icon {
+  overflow: hidden;
+  width: 100%;
+  position: absolute;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  top: 50%;
+}
+
+figure.snip1114 i {
+  color: white;
+  font-size: 44px;
+}
+
+figure.snip1114 a {
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  z-index: 1;
+}
+
+figure.snip1114:hover .circle,
+figure.snip1114.hover .circle {
+  background-color: rgba(0, 0, 0, 0);
+}
+
+figure.snip1114:hover .circle:before,
+figure.snip1114.hover .circle:before,
+figure.snip1114:hover .circle:after,
+figure.snip1114.hover .circle:after {
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
+
+figure.snip1114:hover .circle:before,
+figure.snip1114.hover .circle:before {
+  -webkit-transform: rotate(15deg);
+  transform: rotate(15deg);
+}
+
+figure.snip1114:hover .circle:after,
+figure.snip1114.hover .circle:after {
+  -webkit-transform: rotate(-15deg);
+  transform: rotate(-15deg);
+}
+
+figure.snip1114:hover h2,
+figure.snip1114.hover h2 {
+  opacity: 1;
+  -webkit-transition-delay: 0.15s;
+  transition-delay: 0.15s;
+  -webkit-transform: translateY(-50%) scale(1);
+  transform: translateY(-50%) scale(1);
+}
+
+figure.snip1114:hover img,
+figure.snip1114.hover img {
+  opacity: 0.35;
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+}
+
+figure.snip1114:hover .icon,
+figure.snip1114.hover .icon {
+  opacity: 0;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  -webkit-transition-delay: 0s;
+  transition-delay: 0s;
+}
 
 
+/* Demo purposes only */
+html {
+  height: 100%;
+}
+
+#imformation{
+ left: 5000;
+ float: center;
+ text-align: center;
+ margin-top: 200;
+ font-size: large;
+ font-family:fantasy;
+ 
+}
 
 
-
-
+@import url(https://fonts.googleapis.com/css?family=Muli);
+.nevigation {
+  font-family: 'Muli', Arial, sans-serif;
+  font-size: 30px;
+  letter-spacing: 1.5px;
+  line-height: 1em;
+  margin: 15px 40px;
+  text-transform: uppercase;
+}
+.nevigation li {
+  display: inline-block;
+  list-style: outside none none;
+  margin: 0.5em 0.6em;
+  padding: 12px 15px;
+  position: relative;
+}
+.nevigation li a {
+  color: black;
+  text-decoration: none;
+}
+.nevigation li:before,
+.nevigation li:after {
+  -webkit-transition: all 0.35s ease;
+  transition: all 0.35s ease;
+  height: 2px;
+  width: 35%;
+  background-color:coral;
+  position: absolute;
+  content: '';
+  opacity: 0;
+}
+.nevigation li:before {
+  top: 0;
+  left: 0;
+}
+.nevigation li:after {
+  bottom: 0;
+  right: 0;
+}
+.nevigation li:hover:before,
+.nevigation li.hover:before,
+.nevigation li:hover:after,
+.nevigation li.hover:after {
+  opacity: 1;
+}
+.nevigation li:hover:before,
+.nevigation li.hover:before {
+  left: 65%;
+}
+.nevigation li:hover:after,
+.nevigation li.hover:after {
+  right: 65%;
+}
