--- a/KMJ/작업/map_css.css
+++ b/KMJ/작업/map_css.css
@@ -3,11 +3,14 @@
 .map_button{
   background-color: #f36506;
   color: white;
-  width: 60;
-  height: 40;
+  width: 80;
+  height: 20;
   float: none;
   position: relative;
-
+  border: none;
+  
+  border-top-left-radius: 15%;
+  border-top-right-radius: 15%;
 }
 
 
@@ -25,8 +28,8 @@
 
 .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
 .map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
-.map_wrap {position: absolute; ;width:100%;height:400px; left: 150; top: 250; }
-#menu_wrap {position:absolute;  height: 740px; top:30; left:1000;bottom:0;width:300px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
+.map_wrap {position: absolute; ;width:100%;height:400px; left: 500; top: 250; }
+#menu_wrap {position:absolute;  height: 740px; top: 10; left:-320;bottom:0;width:300px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
 .bg_white {background:#fff;}
 #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0; background-color: wheat}
 #menu_wrap .option{text-align: center;}
@@ -118,4 +121,20 @@
 .nevigation li:hover:after,
 .nevigation li.hover:after {
   right: 65%;
+}
+
+
+#search_button{
+  
+  width: 20;
+  height: 20;
+ float: inline-end;
+ position: absolute;
+ right: 38;
+}
+
+#search_img{
+  width: 20;
+  height: 20;
+  float: inline-end;
 }
