--- a/KMJ/작업/map_css.css
+++ b/KMJ/작업/map_css.css
@@ -1,18 +1,20 @@
 
 
 .map_button{
-  background-color: #f36506;
+  display: inline-block;
+  /* background-color: #f36506; */
+  background-color: #fdac75;
   color: white;
-  width: 80;
-  height: 20;
+  width: 75;
+  height: 23;
+  /* letter-spacing: .5px; */
   float: none;
   position: relative;
   border: none;
-  
-  border-top-left-radius: 15%;
-  border-top-right-radius: 15%;
+  margin-right: 5!important;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
 }
-
 
 
 @media ( min-width: 208px ) {
@@ -28,13 +30,14 @@
 
 .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
 .map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
-.map_wrap {position: absolute; ;width:100%;height:400px; left: 500; top: 250; }
-#menu_wrap {position:absolute;  height: 740px; top: 10; left:-320;bottom:0;width:300px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
+.map_wrap {position: absolute; width:100%; height:400px; left: 545; top: 250; }
+#map {width: 900px;}
+#menu_wrap {position:absolute;  height: 740px; top: 14; left:-320;bottom:0;width:300px;margin:10px 0 30px 10px;padding:5px;overflow-y:auto;background:rgba(255, 255, 255, 0.7);z-index: 1;font-size:12px;border-radius: 10px;}
 .bg_white {background:#fff;}
 #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0; background-color: wheat}
 #menu_wrap .option{text-align: center;}
 #menu_wrap .option p {margin:10px 0;}  
-#menu_wrap .option button {margin-left:5px;}
+/* #menu_wrap .option button {margin-left:5px;} */
 #placesList li {list-style: none; }
 #placesList .item {position:relative;border-bottom:1px solid #888;overflow: hidden;cursor: pointer;min-height: 65px;}
 #placesList .item span {display: block;margin-top:4px;}
@@ -125,16 +128,31 @@
 
 
 #search_button{
-  
-  width: 20;
-  height: 20;
- float: inline-end;
+  box-sizing: border-box;
+  width: 32;
+  height: 30px;
+  float: right;
  position: absolute;
- right: 38;
+ right: 15;
+ overflow: hidden;
+ /* border-left: none; */
+ border-width: .5px;
+ border-top-right-radius: 8%;
+ border-bottom-right-radius: 8%;
+}
+
+#keyword{
+  box-sizing: border-box;
+  width: 250px;
+  height: 30px;
+  font-size: 14px;
+  padding: 3px 8px 3px;
+  margin-bottom: 5px;
 }
 
 #search_img{
-  width: 20;
-  height: 20;
-  float: inline-end;
+  width: 60%;
+  height: 60%;
+  /* margin-left: -0.5px; */
+  /* float: inline-end; */
 }
